# webdis

./: .cliff.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.external-redis.yml  docker-compose.prod.yml  docker-compose.rdb.yml  docker-compose.ssl.yml  prek.toml  redis-web.schema.json  webdis.json  webdis.legacy.json  webdis.prod.json  webdis.schema.json
.github/actions/setup-rust/: action.yml
.github/workflows/: astro.yml  build-and-push.yml  build.yml  changelog.yml  pages-astro.yml  prek.yml  publish-crates.yml  release-please.yml  reusable-build.yml
crates/redis-web/: CHANGELOG.md  Cargo.toml
crates/redis-web-bench/: Cargo.toml
crates/redis-web-bench/src/: lib.rs  main.rs  model.rs  process.rs  report.rs  spec.rs  suites.rs  summary.rs
crates/redis-web-bench/tests/: compare_smoke.rs
crates/redis-web-compat/: CHANGELOG.md  Cargo.toml
crates/redis-web-core/: CHANGELOG.md  Cargo.toml
crates/redis-web-core/src/: acl.rs  config.rs  interfaces.rs  lib.rs  request.rs
crates/redis-web-hiredis-compat/: Cargo.toml  README.md  build.rs
crates/redis-web-hiredis-compat/include/hiredis/: alloc.h  hiredis.h  read.h  sds.h
crates/redis-web-hiredis-compat/pkgconfig/: hiredis.pc  redisweb-hiredis.pc
crates/redis-web-hiredis-compat/src/: lib.rs
crates/redis-web-hiredis-compat/tests/: compile-abi-layout.sh  compile-fixture.sh  compile-runtime-roundtrip.sh
crates/redis-web-hiredis-compat/tests/fixtures/: abi_layout.c  runtime_command_roundtrip.c  smoke.c
crates/redis-web-runtime/: CHANGELOG.md  Cargo.toml  build.rs
crates/redis-web-runtime/proto/redis_web/v1/: gateway.proto
crates/redis-web-runtime/src/: compat.rs  executor.rs  grpc.rs  handler.rs  lib.rs  redis.rs  server.rs  websocket.rs
crates/redis-web/src/: lib.rs
crates/redis-web/tests/: bench-hiredis-compat.sh  config_test.rs  functional_grpc_contract_test.rs  functional_interface_mapping_test.rs  integration_hiredis_compat_test.rs  integration_process_boot_test.rs  integration_redis_grpc_test.rs  integration_redis_socket_test.rs
crates/redis-web/tests/support/: process_harness.rs  router_harness.rs  stub_executor.rs
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.external-redis.yml  docker-compose.prod.yml  docker-compose.rdb.yml  docker-compose.ssl.yml
docs/: README.md  astro.config.mjs  changelog.md  package.json  webdis-docker-content-trust.md  webdis-docker-external-redis.md  webdis-docker-serve-rdb-file.md  webdis-redis-docker-compose-ssl.md  webdis-redis-docker-compose.md
docs/docker/: README.md  ci-github-actions-sample.yml  compose.dev.md  compose.prod.md  compose.ssl.md  content-trust.md  external-redis.md  migration.md  serve-rdb.md
docs/examples/config/: redis-web.bench.yaml  redis-web.grpc.json  webdis.json  webdis.legacy.json  webdis.prod.json
docs/plans/: 2026-03-03-hiredis-compat-meta-pr.md
docs/scripts/: check-links.mjs
docs/src/content/docs/: index.md
docs/src/content/docs/compatibility/: compat-test-matrix.md  hiredis-client-integration.md  hiredis-dropin.md  migration-webdis-to-redis-web.md  webdis-compatibility.md
docs/src/content/docs/getting-started/: first-requests.md  intent.md  overview.md  run-and-first-requests.md  run.md
docs/src/content/docs/guides/: deployment.md  docker-dev.md  docker-prod.md  embedding.md  grpc-development.md  hiredis-functional-tests.md  hiredis-performance-tests.md  security.md
docs/src/content/docs/maintainers/: architecture.md  changelog.md  release.md  testing.md
docs/src/content/docs/reference/: api.md  cli.md  config-examples.md  configuration.md  formats.md  http.md  websocket.md
scripts/: build-hiredis-compat.sh  compose-smoke.sh  generate-certs.sh  import-rdb.sh  start-redis-web.sh  start-webdis.sh  validate-image.sh
src/: acl.rs  config.rs  executor.rs  format.rs  handler.rs  interfaces.rs  lib.rs  logging.rs  main.rs  pubsub.rs  redis.rs  request.rs  resp.rs  server.rs  websocket.rs
subprojects/redispy-hiredis-compat/: .gitignore  README.md  USAGE.md
subprojects/redispy-hiredis-compat/patches/hiredis-py/: external-link.patch
subprojects/redispy-hiredis-compat/scripts/: audit-hiredis-symbols.sh  audit-no-unsupported-sync.sh  bootstrap.sh  build-compat-artifacts.sh  build-hiredis-wheel.sh  common.sh  pin-upstreams.sh  run-redispy-runtime-matrix.sh  run-redispy-tests.sh  setup-test-env.sh  start-redis-test-env.sh  stop-redis-test-env.sh  verify-hiredis-active.py  verify-hiredis-runtime-behavior.py
tests/: README.md  config_test.rs  functional_http_contract_test.rs  functional_interface_mapping_test.rs  functional_ws_contract_test.rs  integration_process_boot_test.rs  integration_redis_http_test.rs  integration_redis_pubsub_test.rs  integration_redis_socket_test.rs  integration_test.rs  logging_fsync_test.rs  websocket_raw_test.rs
tests/support/: mod.rs  process_harness.rs  redis_fixtures.rs  router_harness.rs  stub_executor.rs
todos/: 001-pending-p2-investigate-benchmark-results-and-code-optimizations.md
