[package]
name = "webdis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
deadpool-redis = "0.14"
ipnet = "2.9"
futures = "0.3"
tokio-stream = "0.1"
rmp-serde = "1.3.0"
base64 = "0.22.1"
async-stream = "0.3.6"

[dev-dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
tokio-tungstenite = "0.28.0"
