[package]
name = "redis-web-bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_web_bench"
path = "src/lib.rs"

[[bin]]
name = "redis-web-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
redis-web-core = { path = "../redis-web-core" }
redis-web-runtime = { path = "../redis-web-runtime" }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23.0"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.28.0"
tonic = { version = "0.12", features = ["transport"] }
