[package]
name = "redis-web-core"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
base64 = "0.22.1"
config = "0.15"
ipnet = "2.11"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
