[package]
name = "redis-web"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_web"
path = "src/lib.rs"

[[bin]]
name = "redis-web"
path = "src/bin/redis-web.rs"

[[bin]]
name = "webdis"
path = "src/bin/webdis.rs"

[[bin]]
name = "redis-web-grpc"
path = "src/bin/redis-web-grpc.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
redis-web-compat = { path = "../redis-web-compat" }
redis-web-core = { path = "../redis-web-core" }
redis-web-runtime = { path = "../redis-web-runtime" }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum = "0.8"
base64 = "0.22.1"
futures-util = "0.3.31"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
reqwest = { version = "0.13.2", features = ["json"] }
tempfile = "3.23.0"
tokio-tungstenite = "0.28.0"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
